--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
+        "moduleResolution": "bundler",
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
         "useDefineForClassFields": false,
     },
